# starting-ragchatbot-codebase

./: .env.example  .gitignore  CLAUDE.md  frontend-changes.md  pyproject.toml
backend/: ai_generator.py  config.py  document_processor.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: conftest.py  test_ai_generator.py  test_api.py  test_config.py  test_rag_system.py  test_search_tools.py
frontend/: index.html  script.js  style.css
scripts/: check-format.sh  format.sh  quality.sh
